# corosync-flatiron-cts

./: .gitignore  AUTHORS  INSTALL  Makefile.am  autobuild.sh  configure.ac  corosync-testagents.spec.in  corosync.spec.in
conf/lenses/: corosync.aug
conf/lenses/tests/: test_corosync.aug
cts/: .gitignore  corolab.py  corosync.py  corotests.py
cts/agents/: .gitignore  Makefile.am  cpg_test_agent.c  syncv2.c
